# os-assignments

./: README.md
assignment1/: a1.c
assignment2/: CMakeLists.txt  Makefile  listing.txt
assignment2/include/myshell/: job_states.h  prompt.h  signal_handlers.h
assignment2/include/myshell/commands/: commands.h
assignment2/include/myshell/commands/internal/: bg.h  cd.h  exit.h  fg.h
assignment2/jd-lib/include/jd/: list.h  queue.h  task.h  threadpool.h
assignment2/jd-lib/src/: CMakeLists.txt
assignment2/jd-lib/src/error/: error.c
assignment2/jd-lib/src/list/: list.c
assignment2/jd-lib/src/queue/: CMakeLists.txt  queue.c
assignment2/jd-lib/src/string/: CMakeLists.txt  string.c
assignment2/jd-lib/src/task/: task.c
assignment2/jd-lib/src/threadpool/: threadpool_private.h
assignment2/jd-lib/src/vector/: vector_private.h
assignment2/src/: CMakeLists.txt  job_states.c  main.c  prompt.c  signal_handlers.c
assignment2/src/commands/: CMakeLists.txt  commands.c
assignment2/src/commands/internal/: argument_validity.c  argument_validity.h  bg.c  cd.c  exit.c  fg.c
assignment3/: questions.txt
assignment3/caterpillar-game/: CMakeLists.txt  Makefile  listing.txt  output.txt
assignment3/caterpillar-game/include/caterpillar/: upkeep.h
assignment3/caterpillar-game/include/caterpillar/bullets/: bullet.h  bullet_collisions.h  collision_reactions.h  registry.h
assignment3/caterpillar-game/include/caterpillar/caterpillars/: caterpillar.h  spawn_caterpillars.h
assignment3/caterpillar-game/include/caterpillar/game/: constants.h  game.h  game_console.h
assignment3/caterpillar-game/include/caterpillar/user/: player.h  player_state.h  user_input.h
assignment3/caterpillar-game/jd-lib/: .gitignore  CMakeLists.txt
assignment3/caterpillar-game/jd-lib/include/jd/: error.h  string.h  vector.h
assignment3/caterpillar-game/jd-lib/src/error/: CMakeLists.txt
assignment3/caterpillar-game/jd-lib/src/list/: CMakeLists.txt
assignment3/caterpillar-game/jd-lib/src/task/: CMakeLists.txt
assignment3/caterpillar-game/jd-lib/src/threadpool/: CMakeLists.txt  threadpool.c
assignment3/caterpillar-game/jd-lib/src/vector/: CMakeLists.txt  vector.c
assignment3/caterpillar-game/src/: CMakeLists.txt  main.c  upkeep.c
assignment3/caterpillar-game/src/bullets/: bullet.c  bullet_collisions.c  bullet_list.c  bullet_list.h  collision_reactions.c  registry.c
assignment3/caterpillar-game/src/caterpillars/: caterpillar.c  spawn_caterpillars.c
assignment3/caterpillar-game/src/game/: constants.c  game.c  game_console.c
assignment3/caterpillar-game/src/user/: player.c  player_state.c  user_input.c
assignment3/distribute/: console.c  console.h  example.c  example.h  main.c
assignment4/: Makefile  listing.txt  main.c
assignment4/error/: error.c  error.h
assignment4/fat32/: boot_sector.h  directory.h  fat.c  fat.h  fat32.c  fat32.h  fat32_header.h  fsinfo.h
assignment4/shell/: shell.c  shell.h
assignment4/shell/commands/: cd.c  commands.c  commands.h  dir.c  get.c  info.c  upload.c
