file(GLOB_RECURSE PRIVATE_HDRS LIST_DIRECTORIES false CONFIGURE_DEPENDS *.h)
set(PUBLIC_HDRS ${PROJECT_SOURCE_DIR}/include/jd/error.h)
file(GLOB_RECURSE SRCS LIST_DIRECTORIES false CONFIGURE_DEPENDS *.c)

add_library(${ERROR_LIB} OBJECT ${PRIVATE_HDRS} ${PUBLIC_HDRS} ${SRCS})
target_include_directories(${ERROR_LIB}
        PUBLIC ${PROJECT_SOURCE_DIR}/include
        PRIVATE ${PROJECT_SOURCE_DIR}/src)
